feat(harness): 引入 EnvironmentSupport 契约并删除 load_skill 与 SkillBinding
- contributor-api/runtime：ToolRequirements 以 EnvironmentSupport{NONE,OPTIONAL,REQUIRED} 取代 boolean
  环境标志，ToolBinding 冻结同源 environmentId/environmentName 组合规则并在 JSON codec 严格编解码。
- builtin：内置工具面冻结为 13 个——统一 read（OPTIONAL，经 ReadToolExecutor 窄端口）加 8 个宿主
  capability 工具（REQUIRED）、task 与 3 个 Goal 工具（NONE）；彻底删除 load_skill 实现、prompt、schema、
  渲染器与相关测试。
- ModelRequestSpec 移除 skillBindings，codec 与 ResolvedRequestValidator 同步收敛。
- daemon/environment：协议与 capabilities 升到 v2，DaemonEnvironmentInfo 以 userName 与绝对
  homeDirectory 取代 rootPath，宿主事实取自进程属性；移除 --environment-root 配置并在 v2 codec 严格
  拒绝历史 v1 payload。